--- a/app/components/layout/toolbar/themeSwitch/themeSwitch.module.scss
+++ b/app/components/layout/toolbar/themeSwitch/themeSwitch.module.scss
@@ -3,5 +3,5 @@
 :export {
   baseBgDark: $base-bg-dark;
   baseBgLight: $base-bg-light;
-  baseBGLightDarker: $base-bg-light-darker;
+  baseBgLightdarker: $base-bg-light-darker;
 }
